--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -13,6 +13,17 @@
       "type": "shell",
       "command": "flutter clean; flutter pub get; flutter build apk --release",
       "group": "build"
+    },
+    {
+      "label": "Run Backend (ExpressJS)",
+      "type": "shell",
+      "command": "node ../backend-fantasy/app.js",
+      "group": {
+        "kind": "build",
+        "isDefault": true
+      },
+      "problemMatcher": [],
+      "detail": "Tarea para ejecutar la aplicación Express con Node.js"
     }
   ]
 }
