--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
   permission_handler: ^11.3.1
   google_fonts: ^6.2.1
   flutter_launcher_icons: ^0.14.1
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
